Set ATA dependency, set most non-SVE book locations

--- a/[Si] Book Challenge/manifest.json
+++ b/[Si] Book Challenge/manifest.json
@@ -17,6 +17,10 @@
 		"UniqueID": "ichortower.SecretNoteFramework",
 		"IsRequired": true
 		},
+		{
+			"UniqueID": "Spiderbuttons.ArbitraryTilesheetAccess",
+			"IsRequired": true
+		},
 		
 	]
 }
