Added remaining book locations and obtainment methods, added context tags to books

--- a/[Si] Book Challenge/manifest.json
+++ b/[Si] Book Challenge/manifest.json
@@ -21,6 +21,9 @@
 			"UniqueID": "Spiderbuttons.ArbitraryTilesheetAccess",
 			"IsRequired": true
 		},
-		
+		{
+			"UniqueID": "Si.CPLeaves",
+			"IsRequired": false
+		},		
 	]
 }
