--- a/[Si] Book Collecting/manifest.json
+++ b/[Si] Book Collecting/manifest.json
@@ -1,5 +1,5 @@
 {
-	"Name": "[Si] Book Challenge",
+	"Name": "[Si] Book Collecting",
 	"Author": "SiTheGreat",
 	"Description": "Collect books hidden around the valley!",
 	"Version": "1.0.0",
