--- a/[Si] Book Collecting/manifest.json
+++ b/[Si] Book Collecting/manifest.json
@@ -4,7 +4,7 @@
 	"Description": "Collect books hidden around the valley!",
 	"Version": "1.0.0",
 	"UniqueID": "Si.BC",
-	"UpdateKeys": [ "Nexus:" ],
+	"UpdateKeys": [ "Nexus:33203" ],
 	"ContentPackFor": {
 		"UniqueID": "Pathoschild.ContentPatcher"
 	},
